<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/text_box"
        android:layout_width="381dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:text="@string/_0"
        android:textAlignment="viewEnd"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/equal"
        android:layout_width="75dp"
        android:layout_height="135dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="55dp"
        android:text="@string/equal"
        android:textColor="#607D8B"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dot"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/parcentage"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginStart="9dp"
        android:layout_marginBottom="55dp"
        android:text="@string/percentage"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button0"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginBottom="55dp"
        android:text="@string/_0"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dot"
        app:layout_constraintStart_toEndOf="@+id/parcentage"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/dot"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginBottom="55dp"
        android:text="@string/dot"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equal"
        app:layout_constraintStart_toEndOf="@+id/button0" />

    <Button
        android:id="@+id/button1"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginStart="9dp"
        android:layout_marginBottom="5dp"
        android:text="@string/_1"
        android:textAlignment="center"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/parcentage"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginBottom="5dp"
        android:text="@string/_2"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginBottom="5dp"
        android:text="@string/_3"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/dot"
        app:layout_constraintEnd_toStartOf="@+id/equal"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/_4"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginBottom="5dp"
        android:text="@string/_5"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginBottom="5dp"
        android:text="@string/_6"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintStart_toEndOf="@+id/button5"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button7"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/_7"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginBottom="5dp"
        android:text="@string/_8"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginBottom="5dp"
        android:text="@string/_9"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintStart_toEndOf="@+id/button8" />

    <Button
        android:id="@+id/minus"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="5dp"
        android:text="@string/_minus"
        android:textColor="#0C0C0C"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button9"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/plus"
        android:layout_width="75sp"
        android:layout_height="65sp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="5dp"
        android:text="@string/_plus"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button6" />

    <Button
        android:id="@+id/del"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/del"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/ac"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ac"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginBottom="5dp"
        android:text="@string/ac"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/division"
        app:layout_constraintStart_toEndOf="@+id/del" />

    <Button
        android:id="@+id/division"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginBottom="5dp"
        android:text="÷"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/multiply"
        app:layout_constraintStart_toEndOf="@+id/ac" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="5dp"
        android:text="@string/_x"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/division" />

</android.support.constraint.ConstraintLayout>